--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,24 +1,23 @@
-/* resources/views/layouts/app.blade.php */
-body {
+*{
     margin: 0;
     font-family: "Poppins", sans-serif;
-    background: #f5f8fa;
+    /* background: #f5f8fa; */
     color: #0f172a;
 }
-main {
-    height: 82vh;
+/* resources/views/layouts/app.blade.php */
+body{
+    background: #f5f8fa;
 }
-
-h1{
+h1 {
     text-align: center;
 }
 /* resources/views/partials/header.blade.php */
-header {
+.header {
     background: #ffffff;
     border-bottom: 1px solid rgba(15, 23, 42, 0.08);
 }
 .header-container {
-    max-width: 980px;
+    max-width: 838px;
     margin: 0 auto;
     padding: 14px 18px;
     display: flex;
@@ -52,14 +51,18 @@ header {
     font-size: 11px;
     background: white;
     padding: 20px;
+    flex: 1;
 }
 /* resources/views/welcome.blade.php */
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     width: 100%;
     padding-top: 38px;
+    max-width: 980px;
+    margin: auto;
 }
 .title {
     margin: 0 0 26px;
@@ -69,11 +72,12 @@ header {
 }
 
 .animal-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 22px;
-    justify-content: center;
-    flex-wrap: wrap;
+    justify-items: center;
 }
+
 /* resources/views/components/animal.blade.php */
 .animal-card {
     width: 260px;
@@ -85,41 +89,41 @@ header {
 }
 
 .animal-card-header {
-    padding: 12px 12px 0;
+    padding: 5px ;
 }
 
 .animal-card-image-wrapper {
     height: 150px;
     border-radius: 12px;
     overflow: hidden;
-   
 }
 
 .animal-card-image-wrapper img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    display: block;
 }
 
 .animal-card-content {
-    padding: 12px 14px 14px;
+    padding: 5px;
 }
 
 .animal-card-title {
     font-weight: 900;
-    font-size: 18px;
+    font-size: 24px;
     margin: 2px 0 6px;
     color: #0b1220;
 }
 
 .animal-card-meta {
-    font-size: 12px; 
+    font-size: 13px;
     line-height: 1.35;
-} 
+    font-weight: 500;
+}
 
 .animal-card-description {
     margin-top: 6px;
+    max-height: 30px;
 }
 
 .animal-card-actions {
@@ -129,7 +133,7 @@ header {
     margin-top: 12px;
 }
 
-.animal-card-actions a{
+.animal-card-actions a {
     font-size: 12px;
     color: #52c9ff;
     font-weight: 700;
@@ -160,11 +164,14 @@ header {
     gap: 28px;
     padding: 18px 26px;
     border-radius: 10px;
+    width: 100%;
+    /* min-height: 180px; */
+    height: auto;
 }
 
 .animal-details-image-wrapper {
-    width: 140px;
-    height: 140px;
+   width: 235px;
+    height: 242px;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -186,6 +193,6 @@ header {
 }
 
 .animal-details-info p {
-    margin-bottom:30px;
+    margin-bottom: 30px;
     font-size: 15px;
 }
